--- a/src/resources/config/jdbc.properties
+++ b/src/resources/config/jdbc.properties
@@ -1,3 +1,3 @@
-jdbc.url = jdbc:mysql://localhost:3306/bubu?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=utf-8
+jdbc.url = jdbc:mysql://localhost:3306/bubu?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
 jdbc.user = root
 jdbc.password = 666666
